0.11.0/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_mcrals_kinetics.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_mcrals_kinetics.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py:


MCR-ALS with kinetic constraints
================================

In this example, we perform MCR-ALS optimization on UV-Vis spectra from a
three-component reaction ``A -> B -> C`` investigated by UV-Vis spectroscopy.
Full details on the reaction and data acquisition conditions can be found in
:cite:t:`bijlsma:2001`.

The data can be downloaded from the `Biosystems Data Analysis Group, University
of Amsterdam <http://www.bdagroup.nl/content/Downloads/datasets/datasets.php>`__.
For convenience, this dataset is also available in the SpectroChemPy test-data
directory as ``matlabdata/METING9.MAT``.

.. GENERATED FROM PYTHON SOURCE LINES 21-26

.. code-block:: default


    import numpy as np

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 27-30

Loading a NDDataset
-------------------
Load the data with the `read` function.

.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: default

    ds = scp.read("matlabdata/METING9.MAT")








.. GENERATED FROM PYTHON SOURCE LINES 33-37

This file contains a pair of datasets. The first dataset contains the time in seconds since the start of the reaction
(t=0). The second dataset contains the UV-VIS spectra of the reaction mixture, recorded at different time points.
The first column of the matrix contains the wavelength axis and the remaining columns
are the measured UV-VIS spectra (wavelengths x timepoints)

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: default

    print("NDDataset names: " + str([d.name for d in ds]))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset names: ['RelTime', 'x9b']




.. GENERATED FROM PYTHON SOURCE LINES 40-42

We load the experimental spectra (in `ds[1]`), add the `y` (time) and `x`
(wavelength) coordinates, and keep one spectrum of out 4:

.. GENERATED FROM PYTHON SOURCE LINES 42-48

.. code-block:: default

    D = scp.NDDataset(ds[1][:, 1:].data.T)
    D.y = scp.Coord(ds[0].data.squeeze(), title="time") / 60
    D.x = scp.Coord(ds[1][:, 0].data.squeeze(), title="wavelength / cm$^{-1}$")
    D = D[::4]
    _ = D.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_001.png
   :alt: plot mcrals kinetics
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 49-50

A first estimate of the concentrations can be obtained by EFA:

.. GENERATED FROM PYTHON SOURCE LINES 50-58

.. code-block:: default

    print("compute EFA...")
    efa = scp.EFA()
    _ = efa.fit(D[:, 300.0:500.0])
    efa.n_components = 3
    C0 = efa.transform()
    C0 = C0 / C0.max(dim="y") * 5.0
    _ = C0.T.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_002.png
   :alt: plot mcrals kinetics
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    compute EFA...




.. GENERATED FROM PYTHON SOURCE LINES 59-61

We can get a better estimate of the concentration (C) and pure spectra profiles (St)
by soft MCR-ALS:

.. GENERATED FROM PYTHON SOURCE LINES 61-66

.. code-block:: default

    mcr_1 = scp.MCRALS(log_level="INFO")
    _ = mcr_1.fit(D, C0)
    _ = mcr_1.C.T.plot()
    _ = mcr_1.St.plot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_003.png
         :alt: plot mcrals kinetics
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_004.png
         :alt: plot mcrals kinetics
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_004.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     Concentration profile initialized with 3 components
     Initial spectra profile computed
     ***           ALS optimisation log            ***
     #iter     RSE / PCA        RSE / Exp      %change
     -------------------------------------------------
       1        0.002867        0.005886      -99.284101
       2        0.002813        0.005863       -0.390168
       3        0.002810        0.005861       -0.020846
     converged !




.. GENERATED FROM PYTHON SOURCE LINES 67-70

Kinetic constraints can be added, i.e., imposing that the concentration profiles obey
a kinetic model. To do so we first define an ActionMAssKinetics object with
roughly estimated rate constants:

.. GENERATED FROM PYTHON SOURCE LINES 70-75

.. code-block:: default

    reactions = ("A -> B", "B -> C")
    species_concentrations = {"A": 5.0, "B": 0.0, "C": 0.0}
    k0 = np.array((0.5, 0.05))
    kin = scp.ActionMassKinetics(reactions, species_concentrations, k0)








.. GENERATED FROM PYTHON SOURCE LINES 76-78

The concentration profile obtained with this approximate model can be computed and
compared with those of the soft MCR-ALS:

.. GENERATED FROM PYTHON SOURCE LINES 78-82

.. code-block:: default

    Ckin = kin.integrate(D.y.data)
    _ = mcr_1.C.T.plot(linestyle="-", cmap=None)
    _ = Ckin.T.plot(clear=False, cmap=None)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_005.png
   :alt: plot mcrals kinetics
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 83-85

Even though very approximate, the same values can be used to run a hard-soft MCR-ALS,
using the public ``ModelProfile`` constraint:

.. GENERATED FROM PYTHON SOURCE LINES 85-103

.. code-block:: default

    import spectrochempy.analysis.constraints as ct

    X = D[:, 300.0:500.0]
    param_to_optimize = {"k[0]": 0.5, "k[1]": 0.05}
    mcr_2 = scp.MCRALS(
        constraints=[
            ct.ModelProfile(
                "C",
                components=[0, 1, 2],
                model=kin.fit_to_concentrations,
                model_args=([0, 1, 2], [0, 1, 2], param_to_optimize),
                model_kwargs={"ivp_solver_kwargs": {"return_NDDataset": False}},
            )
        ]
    )

    _ = mcr_2.fit(X, Ckin)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Optimization terminated successfully.
             Current function value: 0.000000
             Iterations: 17
             Function evaluations: 35
    Optimization terminated successfully.
             Current function value: 5.290534
             Iterations: 28
             Function evaluations: 54
    Optimization terminated successfully.
             Current function value: 3.041500
             Iterations: 23
             Function evaluations: 46
    Optimization terminated successfully.
             Current function value: 2.060751
             Iterations: 22
             Function evaluations: 44
    Optimization terminated successfully.
             Current function value: 1.566088
             Iterations: 19
             Function evaluations: 38




.. GENERATED FROM PYTHON SOURCE LINES 104-112

The legacy traitlet-based API is still supported for backward compatibility::

    mcr_2 = scp.MCRALS()
    mcr_2.hardConc = [0, 1, 2]
    mcr_2.getConc = kin.fit_to_concentrations
    mcr_2.argsGetConc = ([0, 1, 2], [0, 1, 2], param_to_optimize)
    mcr_2.kwargsGetConc = {"ivp_solver_kwargs": {"return_NDDataset": False}}
    _ = mcr_2.fit(X, Ckin)

.. GENERATED FROM PYTHON SOURCE LINES 114-117

Now, let's compare the concentration profile of MCR-ALS
(C = X(C_{kin}^+ X)^+) with
that of the optimized kinetic model (C_{kin} \equiv `C_constrained`):

.. GENERATED FROM PYTHON SOURCE LINES 117-122

.. code-block:: default



    _ = mcr_2.C.T.plot()
    _ = mcr_2.C_constrained.T.plot(clear=False)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_006.png
   :alt: plot mcrals kinetics
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 124-126

Finally, let's plot some of the pure spectra profiles St, and the
 reconstructed dataset  (X_hat = C St) vs original dataset (X) and residuals.

.. GENERATED FROM PYTHON SOURCE LINES 126-129

.. code-block:: default

    _ = mcr_2.St.plot()
    _ = mcr_2.plotmerit(nb_traces=10)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_007.png
         :alt: plot mcrals kinetics
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_007.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_008.png
         :alt: plot mcrals kinetics
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_mcrals_kinetics_008.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 130-132

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 132-134

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.669 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_mcrals_kinetics.py <plot_mcrals_kinetics.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_mcrals_kinetics.ipynb <plot_mcrals_kinetics.ipynb>`
